--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 
   },
   "require-dev": {
-
+    "phpunit/phpunit":                      "3.7.*",
+    "phpunit/php-code-coverage":            "*"
   },
   "autoload": {
     "psr-0": {
