--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "task"
   ],
   "require": {
-
+    "kevinlebrun/colors.php":               "0.3.0"
   },
   "require-dev": {
     "phpunit/phpunit":                      "3.7.*",
