--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "task"
   ],
   "require": {
+    "doctrine/inflector":                   "v1.0",
     "kevinlebrun/colors.php":               "0.3.0"
   },
   "require-dev": {
