--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,5 @@
+before_commands:
+  - composer install
 tools:
   php_code_coverage:
-    test_command: vendor/bin/phpunit -c tests/phpunit.xml
+    test_command: phpunit -c tests/phpunit.xml
